--- a/p5.html
+++ b/p5.html
@@ -10,12 +10,11 @@
     <div class="grid">
         <div class="dropdown">
             <div class="sand">
-                <button id="busd"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
-                <div class="list">
-                    
-                </div>
+                <button id="busd" onclick="menu()"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
+                <a href="http://127.0.0.1:5500/GitHub/DM-NSI-2/p5.html" id="recharger"><img src="images/refresh.png" alt="bouton relance site" class="logo96px"></a>
             </div>
         </div> 
+        <div class="barre"></div>
         <div class="container">
             <div class="top">
                 <h1>composants</h1>
