--- a/p5.html
+++ b/p5.html
@@ -11,8 +11,9 @@
         <div class="dropdown">
             <div class="sand">
                 <button id="busd" onclick="menu()"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
-                <a href="http://127.0.0.1:5500/GitHub/DM-NSI-2/p5.html" id="recharger"><img src="images/refresh.png" alt="bouton relance site" class="logo96px"></a>
             </div>
+            <a href="http://127.0.0.1:5500/GitHub/DM-NSI-2/p5.html" id="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a>
+            <a href="https://github.com/Intfly/DM-NSI-2" id ="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
         </div> 
         <div class="barre"></div>
         <div class="container">
