--- a/index.html
+++ b/index.html
@@ -32,40 +32,48 @@
             <div class="composants">
                 <div class="compo">
                     <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place au centre gauche du boitier.</p></div>
-                    <div id="d1" draggable="true" class="images"></div>
+                    <div id="d1" draggable="true" class="d1 images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p2" class="interrogation_txt">le CPU(ou processeur) met en relation les différents composants du pc. Il se situe au centre de la carte mère.</p></div>
-                    <img src="images/cpu.png" alt="" class="images" draggable="true">
+                    <div id="d2" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p3" class="interrogation_txt">Le ventirad permet de refroidir le processeur en se mettant dessus.</p></div>
-                    <img src="images/cooler.png" alt="" class="images">
+                    <div id="d3" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p4" class="interrogation_txt">la mémoire ram traite les donnés devant être accessible rapidement. elle se situe à droite du processeur.</p></div>
-                    <img src="images/ram.png" alt="" class="images">
+                    <div id="d4" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p1" class="interrogation_txt">le SSD est technologie remplaçant les disques durs conventionnels, ils sont plus rapides mais plus chers.</p></div>
-                    <img src="images/ssd.png" alt="" class="images">
+                    <div id="d5" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p6" class="interrogation_txt">le HDD(ou disque dur) permet de stocker des données</p></div>
-                    <img src="images/hddp.png" alt="" class="images">
+                    <div id="d6" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p7" class="interrogation_txt">l'alimentation alimente les différents composants en éléctricité</p></div>
-                    <img src="images/alim.png" alt="" class="images">
+                    <div id="d7" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p8" class="interrogation_txt">le GPU(ou carte grapique) s'occupe des calculs et de l'affichages des informations</p></div>
-                    <img src="images/gpuf.png" alt="" class="images">
+                    <div id="d8" draggable="true" class="images"></div>
                 </div>
             </div>
         </div>
         <div class="pc">
             <img src="images/boitier.png" alt="boitier du pc" id="case">
+            <div id="carte-mere" class="compopc"></div>
+            <div id="cpu" class="compopc"></div>
+            <div id="cooler" class="compopc"></div>
+            <div id="ram" class="compopc"></div>
+            <div id="ssd" class="compopc"></div>
+            <div id="hdd" class="compopc"></div>
+            <div id="alim" class="compopc"></div>
+            <div id="gpu" class="compopc"></div>
         </div>
     </div>
 </body>
