--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>PC Builder</title>
     <link rel="stylesheet" href="styles/stylep5.css">
-    <script src="script.js"></script>
+    
 </head>
 <body>
     <div>
@@ -32,7 +32,7 @@
             <div class="composants">
                 <div class="compo">
                     <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place au centre gauche du boitier.</p></div>
-                    <div id="d1" draggable="true" class="d1 images"></div>
+                    <div id="d1" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <div class="interro"><p id="p2" class="interrogation_txt">le CPU(ou processeur) met en relation les différents composants du pc. Il se situe au centre de la carte mère.</p></div>
@@ -76,5 +76,6 @@
             <div id="gpu" class="compopc"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
