--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div>
         <button id="boutonsortie" onclick="menu()"></button>
     </div>
+    <div id="fini">
+        <p id ="pfini">bien joué, vous avez fini</p>
+        <button id="boutonfini" onclick="boutonfiniok()">ok!</button>
+    </div>
     <div class="grid">
         <div class="dropdown">
             <div class="sand">
