--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <div id="d3" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt4" onclick="bt4()">?</button>
                     <div class="interro"><p id="p4" class="interrogation_txt">la mémoire ram traite les donnés devant être accessible rapidement. elle se situe à droite du processeur.</p></div>
                     <div id="d4" draggable="true" class="images"></div>
                 </div>
