--- a/index.html
+++ b/index.html
@@ -35,35 +35,42 @@
             </div>
             <div class="composants">
                 <div class="compo">
+                    <button id="bt1" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place au centre gauche du boitier.</p></div>
                     <div id="d1" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt2" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p2" class="interrogation_txt">le CPU(ou processeur) met en relation les différents composants du pc. Il se situe au centre de la carte mère.</p></div>
                     <div id="d2" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt3" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p3" class="interrogation_txt">Le ventirad permet de refroidir le processeur en se mettant dessus.</p></div>
                     <div id="d3" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
-                    <button id="bt4" onclick="bt4()">?</button>
+                    <button id="bt4" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p4" class="interrogation_txt">la mémoire ram traite les donnés devant être accessible rapidement. elle se situe à droite du processeur.</p></div>
                     <div id="d4" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt5" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p1" class="interrogation_txt">le SSD est technologie remplaçant les disques durs conventionnels, ils sont plus rapides mais plus chers.</p></div>
                     <div id="d5" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt6" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p6" class="interrogation_txt">le HDD(ou disque dur) permet de stocker des données</p></div>
                     <div id="d6" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt7" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p7" class="interrogation_txt">l'alimentation alimente les différents composants en éléctricité</p></div>
                     <div id="d7" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
+                    <button id="bt8" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p8" class="interrogation_txt">le GPU(ou carte grapique) s'occupe des calculs et de l'affichages des informations</p></div>
                     <div id="d8" draggable="true" class="images"></div>
                 </div>
