--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="composants">
                 <div class="compo">
                     <button id="bt1" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place au centre gauche du boitier.</p></div>
+                    <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place en haut à gauche du boitier.</p></div>
                     <div id="d1" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
@@ -56,22 +56,22 @@
                 </div>
                 <div class="compo">
                     <button id="bt5" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p1" class="interrogation_txt">le SSD est technologie remplaçant les disques durs conventionnels, ils sont plus rapides mais plus chers.</p></div>
+                    <div class="interro"><p id="p5" class="interrogation_txt">le SSD est une technologie de stockage remplaçant les disques durs conventionnels, ils sont plus rapides mais plus chers. ils se mettent en dessous du processeur.</p></div>
                     <div id="d5" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <button id="bt6" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p6" class="interrogation_txt">le HDD(ou disque dur) permet de stocker des données</p></div>
+                    <div class="interro"><p id="p6" class="interrogation_txt">le HDD(ou disque dur) permet de stocker des données, il se place dans le coin en bas à droite du pc.</p></div>
                     <div id="d6" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <button id="bt7" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p7" class="interrogation_txt">l'alimentation alimente les différents composants en éléctricité</p></div>
+                    <div class="interro"><p id="p7" class="interrogation_txt">l'alimentation alimente les différents composants en éléctricité. Elle se situe en bas à gauche du boitier.</p></div>
                     <div id="d7" draggable="true" class="images"></div>
                 </div>
                 <div class="compo">
                     <button id="bt8" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p8" class="interrogation_txt">le GPU(ou carte grapique) s'occupe des calculs et de l'affichages des informations</p></div>
+                    <div class="interro"><p id="p8" class="interrogation_txt">le GPU(ou carte grapique) s'occupe des calculs et de l'affichages des informations.Elle se place en bas de la carte mère.</p></div>
                     <div id="d8" draggable="true" class="images"></div>
                 </div>
             </div>
