--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
                 <h1>composants</h1>
             </div>
             <div class="composants">
-                <div class="compo">
+                <div class="compo" id="di1">
                     <button id="bt1" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place en haut à gauche du boitier.</p></div>
                     <div id="d1" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di2">
                     <button id="bt2" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p2" class="interrogation_txt">le CPU(ou processeur) met en relation les différents composants du pc. Il se situe au centre de la carte mère.</p></div>
                     <div id="d2" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di3">
                     <button id="bt3" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p3" class="interrogation_txt">Le ventirad permet de refroidir le processeur en se mettant dessus.</p></div>
                     <div id="d3" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di4">
                     <button id="bt4" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p4" class="interrogation_txt">la mémoire ram traite les donnés devant être accessible rapidement. elle se situe à droite du processeur.</p></div>
                     <div id="d4" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di5">
                     <button id="bt5" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p5" class="interrogation_txt">le SSD est une technologie de stockage remplaçant les disques durs conventionnels, ils sont plus rapides mais plus chers. ils se mettent en dessous du processeur.</p></div>
                     <div id="d5" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di6">
                     <button id="bt6" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p6" class="interrogation_txt">le HDD(ou disque dur) permet de stocker des données, il se place dans le coin en bas à droite du pc.</p></div>
                     <div id="d6" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di7">
                     <button id="bt7" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p7" class="interrogation_txt">l'alimentation alimente les différents composants en éléctricité. Elle se situe en bas à gauche du boitier.</p></div>
                     <div id="d7" draggable="true" class="images"></div>
                 </div>
-                <div class="compo">
+                <div class="compo" id="di8">
                     <button id="bt8" onclick="btinterro(this.id)" class="boutoninterro">?</button>
                     <div class="interro"><p id="p8" class="interrogation_txt">le GPU(ou carte grapique) s'occupe des calculs et de l'affichages des informations.Elle se place en bas de la carte mère.</p></div>
                     <div id="d8" draggable="true" class="images"></div>
