--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="pc">
-            <img src="images/boitier.png" alt="boitier du pc" id="case">
+            <div id="case"></div>
             <div id="carte-mere" class="compopc"></div>
             <div id="cpu" class="compopc"></div>
             <div id="cooler" class="compopc"></div>
