--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="sand">
                 <button id="busd" onclick="menu()"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
             </div>
-            <a href="http://127.0.0.1:5500/GitHub/DM-NSI-2/p5.html" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a>
+            <a href="http://intfly.me/DM-NSI-2/" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a>
             <a href="https://github.com/Intfly/DM-NSI-2"  class="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
             <a href="" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
         </div> 
