--- a/index.html
+++ b/index.html
@@ -1,93 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>PC Builder</title>
-    <link rel="stylesheet" href="styles/stylep5.css">
-    
+    <title>menu</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div>
-        <button id="boutonsortie" onclick="menu()"></button>
-    </div>
-    <div id="fini">
-        <p id ="pfini">bien joué, vous avez fini</p>
-        <button id="boutonfini" onclick="boutonfiniok()">ok!</button>
-    </div>
+    <div class="top"><h1 id="tt">Bienvenue !</h1></div>
+    <div class="rond" id="r1"></div>
+    <div class="rond"id ="r2"></div>
     <div class="grid">
-        <div class="dropdown">
-            <div class="sand">
-                <button id="busd" onclick="menu()"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
-            </div>
-            <a href="http://intfly.me/DM-NSI-2/" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a>
-            <a href="https://github.com/Intfly/DM-NSI-2"  class="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
-            <a href="" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
-        </div> 
-        <div class="barre">
-            <h2>menu</h2>
-            <h2>recharger</h2>
-            <h2>repo github</h2>
-            <h2>autres sites </h2>
-        </div>
-        <div class="container">
-            <div class="top">
-                <h1>composants</h1>
-            </div>
-            <div class="composants">
-                <div class="compo" id="di1">
-                    <button id="bt1" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p1" class="interrogation_txt">la carte mère est le composant principal du pc, elle relie les composants entre eux. Elle se place en haut à gauche du boitier.</p></div>
-                    <div id="d1" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di2">
-                    <button id="bt2" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p2" class="interrogation_txt">le CPU(ou processeur) met en relation les différents composants du pc. Il se situe au centre de la carte mère.</p></div>
-                    <div id="d2" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di3">
-                    <button id="bt3" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p3" class="interrogation_txt">Le ventirad permet de refroidir le processeur en se mettant dessus.</p></div>
-                    <div id="d3" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di4">
-                    <button id="bt4" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p4" class="interrogation_txt">la mémoire ram traite les donnés devant être accessible rapidement. elle se situe à droite du processeur.</p></div>
-                    <div id="d4" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di5">
-                    <button id="bt5" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p5" class="interrogation_txt">le SSD est une technologie de stockage remplaçant les disques durs conventionnels, ils sont plus rapides mais plus chers. ils se mettent en dessous du processeur.</p></div>
-                    <div id="d5" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di6">
-                    <button id="bt6" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p6" class="interrogation_txt">le HDD(ou disque dur) permet de stocker des données, il se place dans le coin en bas à droite du pc.</p></div>
-                    <div id="d6" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di7">
-                    <button id="bt7" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p7" class="interrogation_txt">l'alimentation alimente les différents composants en éléctricité. Elle se situe en bas à gauche du boitier.</p></div>
-                    <div id="d7" draggable="true" class="images"></div>
-                </div>
-                <div class="compo" id="di8">
-                    <button id="bt8" onclick="btinterro(this.id)" class="boutoninterro">?</button>
-                    <div class="interro"><p id="p8" class="interrogation_txt">le GPU(ou carte grapique) s'occupe des calculs et de l'affichages des informations.Elle se place en bas de la carte mère.</p></div>
-                    <div id="d8" draggable="true" class="images"></div>
-                </div>
+        <div class="enfant">
+            <div class="image" id="im1"></div>
+            <div class="texte">
+                <p>La première partie du DM, elle contient mon CV</p>
+                <a href="http://intfly.me/DM-NSI-2/">lien</a>
             </div>
         </div>
-        <div class="pc">
-            <div id="case"></div>
-            <div id="carte-mere" class="compopc"></div>
-            <div id="cpu" class="compopc"></div>
-            <div id="cooler" class="compopc"></div>
-            <div id="ram" class="compopc"></div>
-            <div id="ssd" class="compopc"></div>
-            <div id="hdd" class="compopc"></div>
-            <div id="alim" class="compopc"></div>
-            <div id="gpu" class="compopc"></div>
+        <div class="enfant">
+            <div class="image" id="im2"></div>
+            <div class="texte">
+                <p>La deuxième partie du DM, Il s'agit de ma lettre de motivation à l'intention d'Uniris, une entreprise aliant biométrie et blockchain</p>
+                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+            </div>
+        </div>
+        <div class="enfant">
+            <div class="image" id="im3"></div>
+            <div class="texte">
+                <p>l'avant dernière partie du DM, j'y présente le métier de développeur</p>
+                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+            </div>
+        </div>
+        <div class="enfant">
+            <div class="image" id="im4"></div>
+            <div class ="texte">
+                <p>La dernière partie du DM, un site de construction de pc. Le but de cette page est de comprendre à quoi servent les différents composants d'un pc et de savoir où les placer.</p>
+                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+            </div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
