--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
             <div class="image" id="im1"></div>
             <div class="texte">
                 <p>La première partie du DM, elle contient mon CV</p>
-                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+                <a href="indexp2.html">lien</a>
             </div>
         </div>
         <div class="enfant">
             <div class="image" id="im2"></div>
             <div class="texte">
                 <p>La deuxième partie du DM, Il s'agit de ma lettre de motivation à l'intention d'Uniris, une entreprise aliant biométrie et blockchain</p>
-                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+                <a href="indexp3.html">lien</a>
             </div>
         </div>
         <div class="enfant">
             <div class="image" id="im3"></div>
             <div class="texte">
                 <p>l'avant dernière partie du DM, j'y présente le métier de développeur</p>
-                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+                <a href="indexp4.html">lien</a>
             </div>
         </div>
         <div class="enfant">
             <div class="image" id="im4"></div>
             <div class ="texte">
                 <p>La dernière partie du DM, un site de construction de pc. Le but de cette page est de comprendre à quoi servent les différents composants d'un pc et de savoir où les placer.</p>
-                <a href="http://intfly.me/DM-NSI-2/">lien</a>
+                <a href="indexp5.html">lien</a>
             </div>
         </div>
     </div>
