--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <div class="top"><h1 id="tt">Bienvenue !</h1></div>
-    <div class="rond" id="r1"></div>
+    <div class="rond" id="r1"></div><!--rond présent dans l'arrière-plan afin de rendre l'arrière-plan moins vide.-->
     <div class="rond"id ="r2"></div>
-    <div class="grid">
+    <div class="grid"><!--div qui entoure les 4 boites. Je lui ais apliqué un display:flex afin de centrer facilement les divs enfants.-->
         <div class="enfant">
-            <div class="image" id="im1"></div>
+            <div class="image" id="im1"></div><!--une image qui se déplace lorsque l'on passe notre souris dessus-->
             <div class="texte">
                 <p>La première partie du DM, elle contient mon CV</p>
-                <a href="indexp2.html">lien</a>
+                <a href="indexp2.html">lien</a><!--lien vers la seconde page du DM.-->
             </div>
         </div>
-        <div class="enfant">
+        <div class="enfant"><!--même pattern pour les 3 autres divs.-->
             <div class="image" id="im2"></div>
             <div class="texte">
                 <p>La deuxième partie du DM, Il s'agit de ma lettre de motivation à l'intention d'Uniris, une entreprise aliant biométrie et blockchain</p>
