--- a/indexp2.html
+++ b/indexp2.html
@@ -6,19 +6,20 @@
     <title>Curiculum Vitae</title>
 </head>
 <body>
-    <div class="boites">
+    <div class="boites"><!-- je sépare ma page en deux parties, celle qui s'affiche en première(en haut du site) et celle qui s'affiche lors du défilement de la page, toutes deux ont une hauteur de 100hv afin de prendre la totalité de la hauteur de l'écran chacune.-->
         <div class="langues">
-            <div class="comp">
+            <div class="comp"><!--gestion des notes sur mes compétences-->
                 <p class="compet compet2">anglais</p>
                 <div class="niveaul">
                     <div class="rempli"></div>
                     <div class="rempli"></div>
                     <div class="rempli"></div>
                     <div class="demirempli">
-                        <div class="demi-rempli"></div>
+                        <div class="demi-rempli"></div><!--la div se sépare en deux afin d'afficher plusieurs couleurs(en l'occurence une partie violette puis une partie grise)-->
                         <div class="demi-rempli"></div>
                     </div>
                     <div class="pasrempli"></div>
+                
             </div>
             <div class="comp">
                 <p class="compet compet2">connaissances</p>
@@ -31,6 +32,7 @@
                         <div class="demi-rempli"></div>
                     </div>
                     <div class="pasrempli"></div>
+                </div>
             </div>
             
         </div>
