--- a/indexp2.html
+++ b/indexp2.html
@@ -7,34 +7,30 @@
 </head>
 <body>
     <div class="boites"><!-- je sépare ma page en deux parties, celle qui s'affiche en première(en haut du site) et celle qui s'affiche lors du défilement de la page, toutes deux ont une hauteur de 100hv afin de prendre la totalité de la hauteur de l'écran chacune.-->
+        <div class="pres">
+            <p></p>
+        </div>
         <div class="langues">
             <div class="comp"><!--gestion des notes sur mes compétences-->
-                <p class="compet compet2">anglais</p>
+                <p class="compet compet2 txtgros">anglais</p>
                 <div class="niveaul">
-                    <div class="rempli"></div>
-                    <div class="rempli"></div>
-                    <div class="rempli"></div>
-                    <div class="demirempli">
-                        <div class="demi-rempli"></div><!--la div se sépare en deux afin d'afficher plusieurs couleurs(en l'occurence une partie violette puis une partie grise)-->
-                        <div class="demi-rempli"></div>
-                    </div>
+                    <div class="rempli c2"></div>
+                    <div class="rempli c2"></div>
+                    <div class="rempli c2"></div>
                     <div class="pasrempli"></div>
-                
-            </div>
-            <div class="comp">
-                <p class="compet compet2">connaissances</p>
-                <div class="niveaul">
-                    <div class="rempli"></div>
-                    <div class="rempli"></div>
-                    <div class="rempli"></div>
-                    <div class="demirempli">
-                        <div class="demi-rempli"></div>
-                        <div class="demi-rempli"></div>
-                    </div>
-                    <div class="pasrempli"></div>
+                    <div class="pasrempli"></div>              
                 </div>
+           </div>
+           <div class="comp">
+            <p class="compet compet2 txtgros">allemand</p>
+            <div class="niveaul">
+                <div class="rempli c2"></div>
+                <div class="rempli c2"></div>
+                <div class="pasrempli"></div>
+                <div class="pasrempli"></div>
+                <div class="pasrempli"></div>
             </div>
-            
+        </div> 
         </div>
     </div>
     <div class="boites">
@@ -58,13 +54,13 @@
                     <div class="rempli"></div>
                     <div class="rempli"></div>
                     <div class="rempli"></div>
-                    <div class="demirempli">
+                    <div class="demirempli"><!--la div se sépare en deux afin d'afficher plusieurs couleurs(en l'occurence une partie violette puis une partie grise).-->
                         <div class="demi-rempli"></div>
                         <div class="demi-rempli"></div>
                     </div>
                     <div class="pasrempli"></div>
                 </div>
-                <p class="compet compet2">réparage de téléphones</p>
+                <p class="compet compet2">réparation de téléphones</p>
                 <div class="niveau">
                     <div class="rempli"></div>
                     <div class="rempli"></div>
