--- a/indexp4.html
+++ b/indexp4.html
@@ -3,41 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/stylep4.css">
-    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <section class="1">
-        <section class="parallax">
-            <div class="parallax-inner">
-                <br>
-                <h1>Forests</h1>
-                <br>
+    <div class="boites">
+        <div class="img1">
+            <div class="parallax-interieur">
+                <h1>Développeur</h1>
             </div>
-        </section>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <section class="parallax-1">
-        <div class="parallax-inner">
-            <br>
-            <h1>Beaches</h1>
-            <br>
-        </div>
-    </section>
-    </section>
-
-    <section class="2">
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <div class="parallax-2">
-        <div class="parallax-inner">
-            <br>
-            <h1>Mountains</h1>
-            <br>
         </div>
     </div>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis minima fuga debitis quasi eius aliquid sapiente? Cumque blanditiis quibusdam, ex totam aliquam provident alias culpa, sit illo, eum doloribus doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit voluptatum aperiam pariatur numquam praesentium recusandae, ipsa at iusto eveniet, distinctio sunt dolore nemo veniam maiores vitae deserunt cum ducimus.</h3>
-    </section>
+    <div class="texte">
+        Le métier de développeur se segmente en différentes catégories.
+        <a href="https://www.jesuisundev.com/ce-que-personne-ne-te-dira-sur-le-metier-de-developpeur/"></a>
+    </div>
+    <div class="boites">
+        <div class="img2">
+            <div class="parallax-interieur">
+                <h1>Travail et stress</h1>
+            </div>
+        </div>
+    </div>
+    <div class="texte">
+        <p>Le métier de développeur n'est pas de tout repos. Il nécessite un apprentissage permanent et un </p>
+        <a href="https://www.jesuisundev.com/ce-que-personne-ne-te-dira-sur-le-metier-de-developpeur/">jesuisundev.com</a>
+    </div>
+    <div class="boites">
+        <div class="img3">
+            <div class="parallax-interieur">
+                <h1>salaire</h1>
+            </div>
+        </div>
+    </div>
+    <div class="texte">
+        <p>
+            Avec un salaire d'entrée de plus de 2000€(<a href="https://fr.indeed.com/career/d%C3%A9veloppeur/salaries?from=top_sb">d'après Indeed</a>), le métier de développeur attire aussi par son salaire élevé.
+        </p>
+
+    </div>
 </body>
 </html>
