--- a/indexp5.html
+++ b/indexp5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>PC Builder</title>
     <link rel="stylesheet" href="styles/stylep5.css">
+    <link rel="icon" href="images/pclogo.png">
     
 </head>
 <body>
@@ -19,9 +20,9 @@
             <div class="sand">
                 <button id="busd" onclick="menu()"><div id="s1"></div><div id="s2"></div><div id="s3"></div></button>
             </div>
-            <a href="http://intfly.me/DM-NSI-2/" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a>
+            <a href="http://valentinf.xyz/DM-NSI-2/indexp5.html" class="buttonmenu"><img src="images/refresh.png" alt="bouton relance site" id="logo96px"></a>
             <a href="https://github.com/Intfly/DM-NSI-2"  class="buttonmenu"><img src="images/github.png" alt="logo github" id="logo512px"></a>
-            <a href="" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
+            <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
         </div> 
         <div class="barre">
             <h2>menu</h2>
