--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>menu</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/web.png">
 </head>
 <body>
     <div class="top"><h1 id="tt">Bienvenue !</h1></div>
