--- a/indexp2.html
+++ b/indexp2.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/stylep2.css">
     <title>Curiculum Vitae</title>
+    <link rel="icon" href="images/cvlogo.png">
 </head>
 <body>
     <div class="boites"><!-- je sépare ma page en deux parties, celle qui s'affiche en première(en haut du site) et celle qui s'affiche lors du défilement de la page, toutes deux ont une hauteur de 100hv afin de prendre la totalité de la hauteur de l'écran chacune.-->
+        <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
         <div class="desc">
             <p class="moi_txt" style="color:rgb(26, 26, 26);font-size:2.7em;">-stage chez absolute PC en 2020</br>-obtention du Brevet des collèges en 2020</br>-obtention de la certification allemande en 2021</br>-passage du BAC de français en 2022</br>-passage du BAC en 2023</p>
         </div>
         <div class="pres">
             <div id="moi"></div>
-            <p class="moi_txt">Valentin</br>Fournel</br>10/02/2005</br></br>1ere 5</br>Institut Notre Dame de Meudon</p>
+            <p class="moi_txt">Valentin</br>Fournel</br>10/02/2005</br></br>1ere 5</br>Institut Notre Dame de Meudon</br>spés:</br>Maths/Physique-Chimie/NSI</p>
         </div>
         <div class="langues">
             <div class="comp"><!--gestion des notes sur mes compétences-->
