--- a/indexp3.html
+++ b/indexp3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lettre de motivation</title>
     <link rel="stylesheet" href="styles/stylep3.css">
+    <link rel="icon" href="images/lettremotivlogo.png">
 </head>
 <body>
     
