--- a/indexp2.html
+++ b/indexp2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/stylep2.css">
     <title>Curiculum Vitae</title>
-    <link rel="icon" href="images/cvlogo.png">
+    <link rel="icon" href="images/cvlogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
 </head>
 <body>
     <div class="boites"><!-- je sépare ma page en deux parties, celle qui s'affiche en première(en haut du site) et celle qui s'affiche lors du défilement de la page, toutes deux ont une hauteur de 100hv afin de prendre la totalité de la hauteur de l'écran chacune.-->
