--- a/indexp4.html
+++ b/indexp4.html
@@ -1,45 +1,67 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/stylep4.css">
-    <title>Document</title>
+    <link rel="icon" href="images/travaillogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
+    <title>Présentation de travail</title>
 </head>
 <body>
-    <div class="boites">
-        <div class="img1">
-            <div class="parallax-interieur">
-                <h1>Développeur</h1>
-            </div>
-        </div>
-    </div>
-    <div class="texte">
-        Le métier de développeur se segmente en différentes catégories.
-        <a href="https://www.jesuisundev.com/ce-que-personne-ne-te-dira-sur-le-metier-de-developpeur/"></a>
-    </div>
-    <div class="boites">
-        <div class="img2">
-            <div class="parallax-interieur">
-                <h1>Travail et stress</h1>
-            </div>
-        </div>
-    </div>
-    <div class="texte">
-        <p>Le métier de développeur n'est pas de tout repos. Il nécessite un apprentissage permanent et un </p>
-        <a href="https://www.jesuisundev.com/ce-que-personne-ne-te-dira-sur-le-metier-de-developpeur/">jesuisundev.com</a>
-    </div>
-    <div class="boites">
-        <div class="img3">
-            <div class="parallax-interieur">
-                <h1>salaire</h1>
-            </div>
-        </div>
-    </div>
-    <div class="texte">
-        <p>
-            Avec un salaire d'entrée de plus de 2000€(<a href="https://fr.indeed.com/career/d%C3%A9veloppeur/salaries?from=top_sb">d'après Indeed</a>), le métier de développeur attire aussi par son salaire élevé.
-        </p>
+    <a href="http://valentinf.xyz/DM-NSI-2/" class="buttonmenu"><img src="images/web.png" alt="logo monde" id="logo512px"></a>
+    <div class="image1"><h1>Dévloppeur</h1></div>
+    <div class="boite">
+        <div class="texte t2">
+            <p>
+            <h4>Le métier de développeur se segmente en différentes catégories.</h4>
+            <ul>
+                <li><a href="#a1">développeur web</a></li>
+                <li><a href="#a2">développeur mobile</a></li>
+                <li><a href="#a3">développeur logiciels</a></li>
+            </ul>
+            </br></br>
 
+            
+            <h4>ils sont soit:</h4>
+            <ul>
+                <li>embauchés</li>
+                <li>En Freelance</li>
+            </ul>
+            </br></br>
+            <h4>avantages et inconvénient:</h4>
+            <ul>
+                <li><a href="#a4">charge de travail</a></li>
+                <li><a href="#a5">Stress et burnout</a></li>
+                <li><a href="#a6">salaire</a></li>
+            </ul>
+            </p>
+        </div>
+        <div class="image2boite">
+            <div class="image2"></div>
+        </div>
+        <div class="boite">  
+            <div class="texte">
+                <div id="a1"></div> le développeur web utilise des langages tels que l'HTML et le CSS et des langages de programmations comme le Javascript et le PHP. Ces langages sont améliorés par des frameworks comme Bootstrap(CSS), angular(JS).</br>Il doit aussi se servir d'API comme Apollo(TypeScript) 
+                </br></br></br>
+                <div id="a2"></div>le développeur utilise des langages de programmation comme le Swift(pour IOS) et Java ou Kotlin(pour Android). Il doit aussi savoir utiliser des Frameworks comme Flutter(Dart) ou React Native(React) afin de développer des applications cross-platform.
+                </br></br></br>
+                <div id="a3"></div> le développeur logiciel quant à lui utilise des langages comme le C++, le C# et le Java. Il utilse des frameworks comme QT(C++), AWT(Java) et  WinForms(C#)
+            </div>
+        </div>
+        <div class="image3boite">
+            <div class="image3"></div>
+        </div>
+        <div class="boite">  
+            <div class="texte">
+                <div id="a4"></div>Le métier de développeur n'est pas de tout repos. Il nécessite un apprentissage permanent et une quantité de travail élevée comparé à un travail plus conventionnel.
+                </br></br></br>
+                <div id="a5"></div> Des burnouts sont constatés chez certains développeurs. C'est pourquoi une partie d'eux passent en freelance afin d'avoir des deadlines plus raisonnables(d'après <a href="https://www.jesuisundev.com/ce-que-personne-ne-te-dira-sur-le-metier-de-developpeur/">jesuisundev.com</a>)
+                </br></br></br>
+                <div id="a6"></div>Avec un salaire d'entrée de plus de 2000€(d'après <a href="https://fr.indeed.com/career/d%C3%A9veloppeur/salaries?from=top_sb">Indeed.com</a>), le métier de développeur attire aussi par sa rémunération élevée.
+            </div>
+        </div>
+        <div class="image4boite">
+            <div class="image4"></div>
+        </div>
     </div>
 </body>
 </html>
