--- a/indexp5.html
+++ b/indexp5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>PC Builder</title>
     <link rel="stylesheet" href="styles/stylep5.css">
-    <link rel="icon" href="images/pclogo.png">
+    <link rel="icon" href="images/pclogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
     
 </head>
 <body>
