--- a/indexp3.html
+++ b/indexp3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Lettre de motivation</title>
     <link rel="stylesheet" href="styles/stylep3.css">
-    <link rel="icon" href="images/lettremotivlogo.png">
+    <link rel="icon" href="images/lettremotivlogo.png"><!--permet de relier un icone qui s'affichera sur la barre des onglets ouverts-->
 </head>
 <body>
     
